[package]
name = "simple_rng"
version = "0.2.0"
authors = ["SandersonFan <elinelson992@gmail.com>"]
edition = "2024"
description = "A simple Linear Congruential Generator (LCG) for pseudo-random numbers"
license = "MIT"
repository = "https://github.com/Papaya-Voldemort/SimpleRNG"
readme = "README.md"

keywords = ["random", "rng", "simple", "lcg", "python-like"]
categories = ["algorithms", "no-std"]

[features]
default = ["std"]
std = []


[dependencies]
